PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_WAC_Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Avg_Dead_net__c</fullName>
        <label>Avg. Dead net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GTNLowestDeadNet__c</fullName>
        <label>GTN at Lowest Dead net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GTN_at_Avg_Dead_net__c</fullName>
        <label>GTN at Avg. Dead net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lowest_Dead_net__c</fullName>
        <label>Lowest Dead net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Max_Dead_net__c</fullName>
        <label>Max Dead net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Min_WAC__c</fullName>
        <label>Min WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>WAC Competitor Products</relationshipLabel>
        <relationshipName>WAC_Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_DRL_WAC__c</fullName>
        <label>Proposed DRL WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ReduPrecent__c</fullName>
        <label>% Redu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_TPT_Costs__c</fullName>
        <label>TPT Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_TPT_costs_as_of_Proposed_WAC__c</fullName>
        <label>TPT costs as % of Proposed WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>WAC Competitor Products</relationshipLabel>
        <relationshipName>WAC_Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WAC Competitor Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_WAC_Change__c</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Phoenix_Proposed_DRL_WAC__c</columns>
        <columns>Phoenix_Lowest_Dead_net__c</columns>
        <columns>Phoenix_Max_Dead_net__c</columns>
        <columns>Phoenix_Avg_Dead_net__c</columns>
        <columns>Phoenix_ReduPrecent__c</columns>
        <columns>Phoenix_GTNLowestDeadNet__c</columns>
        <columns>Phoenix_GTN_at_Avg_Dead_net__c</columns>
        <columns>Phoenix_Min_WAC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/8/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>Phoenix_WAC_Change__c</field>
            <operation>equals</operation>
            <value>WAC Change-000060</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WACCompProduct - {000000}</displayFormat>
        <label>WAC Competitor Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>